[gd_scene load_steps=10 format=3 uid="uid://b87lc5tecb0nw"]

[ext_resource type="PackedScene" uid="uid://ttq4gsdl055k" path="res://scene/bg.tscn" id="1_j1fl2"]
[ext_resource type="Script" path="res://script/menu.gd" id="1_ysf1d"]
[ext_resource type="Theme" uid="uid://ciej81owmdlvh" path="res://button.tres" id="2_3o8yl"]
[ext_resource type="FontFile" uid="uid://cjutvjr1f2h7g" path="res://assets/Oswald/Oswald-VariableFont_wght.ttf" id="3_177yj"]

[sub_resource type="Gradient" id="Gradient_6msc1"]
offsets = PackedFloat32Array(0, 0.621762)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_edwbh"]
gradient = SubResource("Gradient_6msc1")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_usc78"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/bg_transition:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/bg_transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.966667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_74qbo"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/bg_transition:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/bg_transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ixjhn"]
_data = {
"fade_in": SubResource("Animation_usc78"),
"fade_out": SubResource("Animation_74qbo")
}

[node name="menu" type="Node2D"]
script = ExtResource("1_ysf1d")

[node name="Button_Play" type="Button" parent="."]
offset_left = 575.0
offset_top = 440.0
offset_right = 705.0
offset_bottom = 497.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_3o8yl")
text = "PLAY"

[node name="Title" type="RichTextLabel" parent="."]
offset_left = 498.0
offset_top = 214.0
offset_right = 783.0
offset_bottom = 349.0
theme_override_fonts/normal_font = ExtResource("3_177yj")
theme_override_font_sizes/normal_font_size = 90
bbcode_enabled = true
text = "[center]XANEL[/center]"
fit_content = true
scroll_active = false

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 2
visibility_layer = 2
z_as_relative = false
position = Vector2(644.42, 274.5)
scale = Vector2(1.06509, 0.787109)
energy = 20.0
range_z_max = 199
texture = SubResource("GradientTexture2D_edwbh")
texture_scale = 8.0

[node name="bg" parent="." instance=ExtResource("1_j1fl2")]
light_mask = 4
visibility_layer = 4
z_index = -2
position = Vector2(-574, -328)

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ixjhn")
}

[node name="bg_transition" type="ColorRect" parent="Transition"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Pressed" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Button_Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="Button_Play" to="bg" method="_on_button_play_pressed"]
[connection signal="animation_changed" from="Transition" to="." method="_on_transition_animation_changed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
